관리자 공지사항

--- a/src/main/resources/static/css/admin/notice.css
+++ b/src/main/resources/static/css/admin/notice.css
@@ -272,7 +272,9 @@ input.modal_input {
 #modal_close_btn:active {
 	background-color:#bcbcbc;
 }
-
+page-list{
+    text-decoration: none;
+}
 
 #modal .modal_layer {
   position:fixed;
