--- a/src/main/resources/templates/admin/floging-estimate.html
+++ b/src/main/resources/templates/admin/floging-estimate.html
@@ -4,8 +4,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-    <link href="../../static/css/admin/notice-form.css" rel="stylesheet">
-    <link href="../../static/css/admin/side-nav.css" rel="stylesheet">
+    <link href="/css/admin/notice-form.css" rel="stylesheet">
+    <link href="/css/admin/side-nav.css" rel="stylesheet">
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
@@ -31,16 +31,15 @@
         <!--side bar-->
         <nav>
             <ul class="mainNav">
-                <li><a href="./admin.html">관리자 계정 관리</a></li>
-                <li><a href="./main.html">메인 관리</a></li>
-                <li><a href="./member.html">회원 관리</a></li>
-                <li><a href="product.html" >상품 관리</a></li>
-                <li><a href="product-form.html" >상품 등록</a></li>
-                <li><a href="./floging.html" >플로깅 목록</a></li>
-                <li><a href="./notice.html" >공지 사항</a></li>
-                <li><a href="./notice-form.html" >공지 사항 작성</a></li>
-                <li><a href="./qna.html" >문의 목록</a></li>
-
+                <li><a th:href="@{amdin}">관리자 계정 관리</a></li>
+                <li><a th:href="@{main}">메인 관리</a></li>
+                <li><a th:href="@{member}">회원 관리</a></li>
+                <li><a th:href="@{product}">상품 관리</a></li>
+                <li><a th:href="@{product-form}">상품 등록</a></li>
+                <li><a th:href="@{flogging}">플로깅 목록</a></li>
+                <li><a th:href="@{notice}">공지 사항</a></li>
+                <li><a th:href="@{notice-form}">공지 사항 작성</a></li>
+                <li><a th:href="@{qna}">문의 목록</a></li>
             </ul>
         </nav>
 
