관리자 회원,공지사항

--- a/src/main/resources/static/css/admin/board.css
+++ b/src/main/resources/static/css/admin/board.css
@@ -376,10 +376,8 @@ table tr.tableTh td {
 	 border-left: none;
 	 cursor: pointer;
  }
- 
- 
- .page-list:hover ,
- .page-list.list-on {
+
+.page-list:hover , .page-list.list-on {
 	color: #666;
 	font-weight: 700;
  }
