--- a/src/main/resources/templates/header-footer/header.html
+++ b/src/main/resources/templates/header-footer/header.html
@@ -6,10 +6,9 @@
     <link href="/css/header-footer/header.css" rel="stylesheet">
     <link href="/css/notice/notice.css" rel="stylesheet">
     <link href="/css/font.css" rel="stylesheet">
-
 </head>
 <body>
-<header>
+<header id="header">
     <div class="sticky-container" style="height: 80.75px;">
         <div class="css-i7a8i3"
              style="position: fixed; z-index: 1102; transition: top 0.1s ease 0s; top: 0px; width: 1690.75px;">
