--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -28,20 +28,20 @@
     <!--mainSidebar -->
     <section class="mainContainer">
         <!--side bar-->
-        <ul class="mainNav">
-            <li><a th:href="@{amdin}">관리자 계정 관리</a></li>
-            <li><a th:href="@{main}">메인 관리</a></li>
-            <li><a th:href="@{member}">회원 관리</a></li>
-            <li><a th:href="@{product}">상품 관리</a></li>
-            <li><a th:href="@{product-form}">상품 등록</a></li>
-            <li><a th:href="@{flogging}">플로깅 목록</a></li>
-            <li><a th:href="@{notice}">공지 사항</a></li>
-            <li><a th:href="@{notice-form}">공지 사항 작성</a></li>
-            <li><a th:href="@{qna}">문의 목록</a></li>
-        </ul>
+        <nav>
+            <ul class="mainNav">
+                <li><a th:href="@{admin}">관리자 계정 관리</a></li>
+                <li><a th:href="@{main}">메인 관리</a></li>
+                <li><a th:href="@{member}">회원 관리</a></li>
+                <li><a th:href="@{product}">상품 관리</a></li>
+                <li><a th:href="@{product-form}">상품 등록</a></li>
+                <li><a th:href="@{floging}">플로깅 목록</a></li>
+                <li><a th:href="@{notice}">공지 사항</a></li>
+                <li><a th:href="@{notice-form}">공지 사항 작성</a></li>
+                <li><a th:href="@{qna}">문의 목록</a></li>
+            </ul>
+        </nav>
         <!--mainScreen 계정관리-->
-
-
         <div class="mainContent">
             <section>
                 <form action="#">
