--- a/src/main/resources/templates/admin/floging.html
+++ b/src/main/resources/templates/admin/floging.html
@@ -31,12 +31,12 @@
         <!--side bar-->
         <nav>
             <ul class="mainNav">
-                <li><a th:href="@{amdin}">관리자 계정 관리</a></li>
+                <li><a th:href="@{admin}">관리자 계정 관리</a></li>
                 <li><a th:href="@{main}">메인 관리</a></li>
                 <li><a th:href="@{member}">회원 관리</a></li>
                 <li><a th:href="@{product}">상품 관리</a></li>
                 <li><a th:href="@{product-form}">상품 등록</a></li>
-                <li><a th:href="@{flogging}">플로깅 목록</a></li>
+                <li><a th:href="@{floging}">플로깅 목록</a></li>
                 <li><a th:href="@{notice}">공지 사항</a></li>
                 <li><a th:href="@{notice-form}">공지 사항 작성</a></li>
                 <li><a th:href="@{qna}">문의 목록</a></li>
@@ -68,7 +68,8 @@
             <div class="memberLists">
                 <div id="root">
                     <div>
-                        <span>총 개</span>
+                        <span>총 <th:block th:text="${pagination.total} +'개'">
+                        </th:block></span>
                         <button class="deleteBtn">삭제</button>
                     </div>
                 </div>
@@ -101,7 +102,7 @@
                             <td>16/30</td>
                             <!--신청중,모집중,모집종료,기각),신청중 상태에서만 버튼으로 만들어 신청서 볼수 있게 만들기 -->
                             <td>모집중</td>
-                            <td><a href="./floging-detail.html"><button type="button" class = "register-detail-btn">상세보기</button></a></td>
+                            <td><a th:href="@{floging-detail}"><button type="button" class = "register-detail-btn">상세보기</button></a></td>
 
                         </tr>
                         <tr>
@@ -113,9 +114,9 @@
                             <td>완주시 휴지 1롤</td>
                             <td>0/30</td>
                             <!--신청중,모집중,모집종료,기각),신청중 상태에서만 버튼으로 만들어 신청서 볼수 있게 만들기 -->
-                            <td><a href="floging-estimate.html"><button type="button" class = "register-estimate-btn">심사 대기</button></a></td>
+                            <td><a th:href="@{floging-estimate}"><button type="button" class = "register-estimate-btn">심사 대기</button></a></td>
 
-                            <td><a href="floging-detail.html"><button type="button" class = "register-detail-btn">상세보기</button></a></td>
+                            <td><a th:href="@{floging-detail}"><button type="button" class = "register-detail-btn">상세보기</button></a></td>
 
                         </tr>
                         </thead>
