--- a/src/main/resources/templates/admin/member.html
+++ b/src/main/resources/templates/admin/member.html
@@ -31,12 +31,12 @@
         <!--side bar-->
         <nav>
             <ul class="mainNav">
-                <li><a th:href="@{amdin}">관리자 계정 관리</a></li>
+                <li><a th:href="@{admin}">관리자 계정 관리</a></li>
                 <li><a th:href="@{main}">메인 관리</a></li>
                 <li><a th:href="@{member}">회원 관리</a></li>
                 <li><a th:href="@{product}">상품 관리</a></li>
                 <li><a th:href="@{product-form}">상품 등록</a></li>
-                <li><a th:href="@{flogging}">플로깅 목록</a></li>
+                <li><a th:href="@{floging}">플로깅 목록</a></li>
                 <li><a th:href="@{notice}">공지 사항</a></li>
                 <li><a th:href="@{notice-form}">공지 사항 작성</a></li>
                 <li><a th:href="@{qna}">문의 목록</a></li>
@@ -45,15 +45,15 @@
 
         <!--mainScreen 회원관리-->
         <div class="mainContent">
-            <form action="#" class = "searchForm">
+            <form th:action="${member}" name="search-form" class = "searchForm">
                 <div class="memberSearch">
                     <div class="memberSearchInput">
-                        <select name = "type">
-                            <option>이름</option>
-                            <option>닉네임</option>
+                        <select name="type">
+                            <option value="n" th:selected="${search.type eq 'n'}">이름</option>
+                            <option value="i" th:selected="${search.type eq 'i'}">닉네임</option>
                         </select>
                         <div>
-                            <input type="text" name ="keyword" placeholder="검색어를 입력하세요">
+                            <input type="text" name ="keyword" th:value="${search.keyword}" placeholder="검색어를 입력하세요">
                         </div>
 
 
@@ -67,14 +67,15 @@
             <div class="memberLists">
                 <div id="root">
                     <div>
-                        <span>총 명</span>
+                        <span>총<th:block th:text="${pagination.total} +'명'">
+                        </th:block></span>
                         <button class="deleteBtn">삭제</button>
                     </div>
                 </div>
                 <form th:action="@{member}" class = "deleteForm">
-                    <input type = "hidden" name = "page" value = "${criteria.page}">
-                    <input type = "hidden" name = "type" value = "${criteria.type}">
-                    <input type = "hidden" name = "keyword" value = "${criteria.keyword}">
+<!--                    <input type = "hidden" name = "page" value = "${criteria.page}">-->
+<!--                    <input type = "hidden" name = "type" value = "${criteria.type}">-->
+<!--                    <input type = "hidden" name = "keyword" value = "${criteria.keyword}">-->
                     <table class="userTable">
                         <thead>
                             <tr class="tableTh" style="border-top:3px solid #6e6e6e;">
@@ -103,7 +104,7 @@
                              alt="이전 페이지로 이동하기 아이콘">
                     </a>
                     <th:block th:each="page:${#numbers.sequence(pagination.startPage, pagination.endPage)}">
-                        <a th:if="${page eq pagination.page}" class="page-list page-list-first "
+                        <a th:if="${page eq pagination.page}" class="page-list list-first"
                            th:text="${page}"></a>
                         <a th:unless="${page eq pagination.page}" th:href="${page}"
                            class="change-page page-list page-list-first list-on" th:text="${page}"></a>
@@ -119,11 +120,11 @@
             </div>
         </div>
     </section>
-    <form action="#" name = "page-form">
-        <input id="page" type = "hidden" name = "page" value = "${criteria.page}">
-        <input type = "hidden" name = "type" value = "${criteria.type}">
-        <input type = "hidden" name = "keyword" value = "${criteria.keyword}">
-    </form>
+<!--    <form action="#" name = "page-form">-->
+<!--        <input id="page" type = "hidden" name = "page" value = "${criteria.page}">-->
+<!--        <input type = "hidden" name = "type" value = "${criteria.type}">-->
+<!--        <input type = "hidden" name = "keyword" value = "${criteria.keyword}">-->
+<!--    </form>-->
 </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
@@ -131,6 +132,8 @@
 <script th:inline="javascript">
     let members = [[${members}]];
     console.log(members);
+    let pagination = [[${pagination}]];
+    console.log(pagination);
 </script>
 <script src="/js/admin/member.js"></script>
 <script src="/js/admin/userpaging.js"></script>
