--- a/src/main/resources/templates/admin/main.html
+++ b/src/main/resources/templates/admin/main.html
@@ -45,10 +45,10 @@
         <div class="mainContent">
             <div class="mainBox">
                 <div class="mainBoxList">
-                    <table class="userTable" >
+                    <table th:object="${userVO}" class="userTable" >
                         <tr class="tableTh" >
                             <th>최근가입자</th>
-                            <th><a href="./member.html" class="moreSee">더보기 -></a><th>
+                            <th><a th:href="@{member}" class="moreSee">더보기 -></a><th>
                         </tr>
                         <tr style="border-top:3px solid #6e6e6e;" >
                             <td>아이디</td>
@@ -57,15 +57,20 @@
                             <td>핸드폰 번호</td>
                             <td>가입날짜</td>
                         </tr>
-
-
+                        <tr>
+                            <td th:text="*{userIdentification}"></td>
+                            <td th:text="*{userNickname}"></td>
+                            <td th:text="*{userTissue}"></td>
+                            <td th:text="*{userRole}"></td>
+                            <td th:text="*{userCreatedDate}"></td>
+                        </tr>
                     </table>
                 </div>
                 <div class="mainBoxList">
                     <table class="boardTable">
                         <tr class="tableTh">
                             <th>플로깅 목록</th>
-                            <th><a href="./floging.html" class="moreSee">더보기 -></a><th>
+                            <th><a th:href="@{floging}" class="moreSee">더보기 -></a><th>
                         </tr>
                         <tr style="border-top:3px solid #6e6e6e;">
                             <td>플로깅 제목</td>
@@ -84,7 +89,7 @@
                     <table class="questionBoardTable">
                         <tr class="tableTh">
                             <th>문의 목록</th>
-                            <th><a href="./qna.html" class="moreSee">더보기 -></a><th>
+                            <th><a th:href="@{qna}" class="moreSee">더보기 -></a><th>
                         </tr>
                         <tr style="border-top:3px solid #6e6e6e;">
                             <td>문의 제목</td>
@@ -99,7 +104,7 @@
                     <table class="noticeBoardTable">
                         <tr class="tableTh">
                             <th>공지사항</th>
-                            <th><a href="./notice.html" class="moreSee">더보기 -></a><th>
+                            <th><a th:href="@{notice}" class="moreSee">더보기 -></a><th>
                         </tr>
                         <tr style="border-top:3px solid #6e6e6e;">
                             <td>공지사항 제목</td>
@@ -117,4 +122,9 @@
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="/js/admin/side-bar.js"></script>
+<script th:inline="javascript">
+    let user1 = [[${users}]];
+    console.log(user1);
+
+</script>
 </html>
