--- a/src/main/resources/templates/admin/product.html
+++ b/src/main/resources/templates/admin/product.html
@@ -68,7 +68,7 @@
             <div class="memberLists">
                 <div id="root">
                     <div>
-                        <span>총<th:block th:text="${pagination.total} +'개'">
+<!--                        <span>총<th:block th:text="${pagination.total} +'개'">-->
                         </th:block></span>
                         <button class="deleteBtn">삭제</button>
                     </div>
@@ -142,6 +142,6 @@
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="/js/admin/side-bar.js"></script>
 <script th:inline="javascript">
-    let pagination = [[${pagination}]]
+    // let pagination = [[${pagination}]]
 </script>
 </html>
