--- a/src/main/resources/templates/admin/notice.html
+++ b/src/main/resources/templates/admin/notice.html
@@ -68,7 +68,7 @@
             <div class="memberLists">
                 <div id="root">
                     <div>
-                        <span>총<th:block th:text="${pagination.total} +'개'">
+                        <span>총<th:block th:text="${adminPagination.total} +'개'">
                         </th:block>
                             </span>
                         <button class="deleteBtn">삭제</button>
@@ -102,19 +102,19 @@
                 <!-- [S] 페이지 컨트롤러 -->
                 <div class="page-controller-wrap">
                     <!-- 이전 버튼 -->
-                    <a th:if="${pagination.prev}" th:href="${pagination.startPage -1}"
+                    <a th:if="${adminPagination.prev}" th:href="${adminPagination.startPage -1}"
                        class="change-page page-list page-list-move page-before">
                         <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAHCAQAAABqrk9lAAAAGElEQVR42mNgAIPi/8X/4QwwE5PBQJADAAKSG3cyVhtXAAAAAElFTkSuQmCC"
                              alt="이전 페이지로 이동하기 아이콘">
                     </a>
-                    <th:block th:each="page:${#numbers.sequence(pagination.startPage, pagination.endPage)}">
-                        <a th:if="${page eq pagination.page}" class="page-list list-first"
+                    <th:block th:each="page:${#numbers.sequence(adminPagination.startPage, adminPagination.endPage)}">
+                        <a th:if="${page eq adminPagination.page}" class="page-list list-first"
                            th:text="${page}"></a>
-                        <a th:unless="${page eq pagination.page}" th:href="${page}"
+                        <a th:unless="${page eq adminPagination.page}" th:href="${page}"
                            class="change-page page-list page-list-first list-on" th:text="${page}"></a>
                     </th:block>
                     <!-- 다음 페이지로 이동하기 -->
-                    <a th:if="${pagination.next}" th:href="${pagination.endPage + 1}"
+                    <a th:if="${adminPagination.next}" th:href="${adminPagination.endPage + 1}"
                        class="change-page page-list page-list-move page-after">
                         <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAHCAQAAABqrk9lAAAAGUlEQVR42mMo/l/8nwECQEwCHEwGhAlRBgA2mht3SwgzrwAAAABJRU5ErkJggg=="
                              alt="다음 페이지로 이동하기 아이콘">
@@ -137,8 +137,8 @@
 <script th:inline="javascript">
     let notices = [[${notices}]];
     console.log(notices);
-    let pagination = [[${pagination}]];
-    console.log(pagination);
+    let adminPagination = [[${adminPagination}]];
+    console.log(adminPagination);
 </script>
 <script src="/js/admin/notice-list.js"></script>
 <script src="/js/admin/paging.js"></script>
