--- a/src/main/resources/templates/admin/qna.html
+++ b/src/main/resources/templates/admin/qna.html
@@ -67,7 +67,7 @@
             <div class="memberLists">
                 <div id="root">
                     <div>
-                        <span>총<th:block th:text="${pagination.total} +'개'">
+                        <span>총<th:block th:text="${adminPagination.total} +'개'">
                         </th:block></span>
                         <button class="deleteBtn">삭제</button>
                     </div>
