--- a/src/main/resources/static/css/login/join.css
+++ b/src/main/resources/static/css/login/join.css
@@ -13,6 +13,9 @@ html {
     background: #fff;
 }
 
+.recaptcha-checkbox-checked .recaptcha-checkbox-checkmark {
+    background-position: 0 -600px;
+}
 body, html {
     line-height: 1;
     font-family: OhouseSans, "Noto Sans KR", "Apple SD Gothic Neo", "맑은 고딕", "Malgun Gothic", sans-serif;
@@ -353,7 +356,6 @@ button, input[type=email], input[type=file], input[type=number], input[type=pass
 }
 
 .css-1gabnbc.css-1gabnbc {
-    white-space: pre;
     height: 31px;
     font-size: 14px;
     line-height: 17px;
@@ -362,9 +364,9 @@ button, input[type=email], input[type=file], input[type=number], input[type=pass
 }
 
 _3AsCW._36MJM, ._3AsCW:disabled {
-    background-color: #a3e4f8;
-    border-color: #a3e4f8;
-    color: #e5f9ff;
+    background-color: #7aab9a;
+    border-color: #7aab9a;
+    color: white;
 }
 
 ._3Z6oR:disabled {
@@ -447,9 +449,13 @@ _3AsCW._36MJM, ._3AsCW:disabled {
     transition: border-color 0.1s ease 0s, background-color 0.1s ease 0s;
 }
 
-._3ASDR.focus-visible, html:not(.js-focus-visible) ._3ASDR:focus {
+._3ASDR.focus-visible, ._3ASDR:focus {
     outline: none;
-    box-shadow: 0 0 0 3px rgba(53,197,240,.3);
+}
+
+.highlight:focus{
+    outline: none;
+    box-shadow: 0 0 0 3px #7aab9a;
 }
 
 .css-oyhedo {
@@ -515,7 +521,6 @@ _3AsCW._36MJM, ._3AsCW:disabled {
 
 .css-edbsi7 {
     position: absolute;
-    overflow: hidden;
     top: 3.6px;
     left: 3px;
     width: 0px;
@@ -742,7 +747,7 @@ css-1jxc35f::before {
 }
 
 @media (-ms-high-contrast:active), (hover: hover), (-ms-high-contrast:none) {
-    ._3AsCW.focus-visible, ._3AsCW:hover, html:not(.js-focus-visible) ._3AsCW:focus {
+    ._3AsCW.focus-visible, ._3AsCW:hover {
         border-color: #3b7661;
         background-color: #3b7661;
     }
@@ -775,4 +780,73 @@ css-1jxc35f::before {
 
 .open {
     display: none;
+}
+
+.email-input__domain__expand.active:active, .email-input__domain__expand.active:focus, .email-input__domain__expand.active:hover {
+    opacity: .6;
+}
+
+.del-direct{
+    cursor: pointer;
+}
+.css-1voj95g {
+    padding-top: 10px;
+    font-size: 14px;
+    line-height: 18px;
+    color: rgb(255, 119, 119);
+}
+
+.email-valid-form{
+    background-color: #fff !important;
+    border-color: #7aab9a !important;
+    color: #7aab9a !important;
+}
+
+.email-valid-form:hover{
+    background-color:#7aab9a36 !important;
+}
+
+
+img.infinite_rotating_logo {
+
+    animation: rotate_image 0.5s linear infinite;
+    transform-origin: 50% 50%;
+}
+
+div.logo-area {
+    text-align: center;
+}
+
+
+@keyframes rotate_image{
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+input::-webkit-input-placeholder {
+    opacity: 0.5;
+}
+input:-ms-input-placeholder {
+    opacity: 0.5;
+}
+textarea::-webkit-input-placeholder {
+    opacity: 0.5;
+}
+textarea:-ms-input-placeholder {
+    opacity: 0.5;
+}
+
+._check_12:before {
+    content: "\e958";
+}
+
+.check{
+    border: 1px solid #7aab9a ;
+    background-color: #3b7661 ;
+}
+
+.css-1jxc35f::before {
+    font-family: OhouseIcon;
+    vertical-align: top;
 }
