--- a/src/main/resources/templates/review/review-form.html
+++ b/src/main/resources/templates/review/review-form.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link href="../../static/css/header-footer/header.css" rel="stylesheet">
-    <link href="../../static/css/notice/notice.css" rel="stylesheet">
-    <link href="../../static/css/font.css" rel="stylesheet">
-    <link href="../../static/css/plogging/plogging-form.css" rel="stylesheet">
+    <link href="/css/notice/notice.css" rel="stylesheet">
+    <link href="/css/plogging/plogging-form.css" rel="stylesheet">
+    <link href="/css/font.css" rel="stylesheet">
+    <link href="/css/header-footer/header.css" rel="stylesheet">
 
 </head>
 <body>
+<th:block th:replace="/header-footer/header::header"></th:block>
 <div class="page">
     <div class="css-b3oum6">
         <div class="css-12bdpl9 e182177l4">
